--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header id="home">
         <nav class="main-nav">
             <div class="container">
-                <a href="https://uadrian24.github.io/#home" class="logo"><img src="https://uadrian24.github.io/imglogo.png" alt="logo"></a>
+                <a href="https://uadrian24.github.io/#home" class="logo">
+                    <img src="https://uadrian24.github.io/img/logo.png" alt="logo">
+                </a>
                 <div class="main-menu">
                     <a href="https://uadrian24.github.io/#home" class="menu-link active">Home</a>
                     <a href="https://uadrian24.github.io/#about" class="menu-link">Istorie</a>
@@ -26,7 +28,7 @@
                     <a href="https://uadrian24.github.io/#contacts" class="menu-link">Contacte</a>
                 </div>
                 <a href="javascript:void(0);" class="menu-toggle" onclick="toggleMenu()">
-                    <img src="https://uadrian24.github.io/imgmenu-toggle.svg" alt="toggle-menu">
+                    <img src="https://uadrian24.github.io/img/menu-toggle.svg" alt="toggle-menu">
                 </a>
             </div>
         </nav>
@@ -37,7 +39,7 @@
                 <div style="margin-top: 30px;"><a href="#about" class="btn btn-red">Vezi mai multe</a></div>
             </div>
         </div>
-        <img class="header-bg" src="https://uadrian24.github.io/imgheader-bg.jpg" alt="header-background">
+        <img class="header-bg" src="https://uadrian24.github.io/img/header-bg.jpg" alt="header-background">
     </header>
     <section id="about" class="about">
         <div class="container">
@@ -45,7 +47,7 @@
                 <h2 class="section-title">Istoria Clubului</h2>
             </div>
             <div class="about-content">
-                <div class="about-left"><img src="https://uadrian24.github.io/imglogo-big.svg" alt="about"></div>
+                <div class="about-left"><img src="https://uadrian24.github.io/img/logo-big.svg" alt="about"></div>
                 <div class="about-right">
                     <p>Fondat în 1923, Clubul de Fotbal "FC Puhoi" a devenit rapid o forță în fotbalul românesc, cunoscut pentru stilul de joc agresiv și pentru pasiunea nemărginită a suporterilor săi.</p>
                     <p>Echipa a câștigat primul titlu național în 1931 și, de atunci, a adunat numeroase trofee interne și internaționale.</p>
@@ -62,7 +64,7 @@
             <div class="cards-swiper swiper-container">
                 <div class="card-list swiper-wrapper">
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/imgteam/player-1.jpg" alt="Team member" class="user-image">
+                        <img src="https://uadrian24.github.io/img/team/player-1.jpg" alt="Team member" class="user-image">
                         <h3 class="user-name">Alexandru Celeadnic</h3>
                         <button class="message-btn">Detalii</button>
                     </div>
@@ -72,22 +74,22 @@
                         <button class="message-btn">Detalii</button>
                     </div>
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/imgteam/player-3.png" alt="User Image" class="user-image">
+                        <img src="https://uadrian24.github.io/img/team/player-3.png" alt="User Image" class="user-image">
                         <h3 class="user-name">Dorian Railean</h3>
                         <button class="message-btn">Detalii</button>
                     </div>
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/imgteam/player-4.jpg" alt="User Image" class="user-image">
+                        <img src="https://uadrian24.github.io/img/team/player-4.jpg" alt="User Image" class="user-image">
                         <h3 class="user-name">Nicolai Cebotari</h3>
                         <button class="message-btn">Detalii</button>
                     </div>
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/imgteam/player-5.jpg" alt="User Image" class="user-image">
+                        <img src="https://uadrian24.github.io/img/team/player-5.jpg" alt="User Image" class="user-image">
                         <h3 class="user-name">Alexei Koshelev</h3>
                         <button class="message-btn">Detalii</button>
                     </div>
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/imgteam/player-6.jpg" alt="User Image" class="user-image">
+                        <img src="https://uadrian24.github.io/img/team/player-6.jpg" alt="User Image" class="user-image">
                         <h2 class="user-name">Andrei Cojuhar</h2>
                         <button class="message-btn">Detalii</button>
                     </div>
@@ -105,32 +107,32 @@
             </div>
             <div class="events-list">
                 <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/imgevents/event-1.jpg" alt="Event 1"></div>
+                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-1.jpg" alt="Event 1"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
                 <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/imgevents/event-2.jpg" alt="Event 2"></div>
+                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-2.jpg" alt="Event 2"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
                 <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/imgevents/event-3.jpg" alt="Event 2"></div>
+                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-3.jpg" alt="Event 2"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
                 <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/imgevents/event-4.jpg" alt="Event 4"></div>
+                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-4.jpg" alt="Event 4"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
                 <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/imgevents/event-5.jpg" alt="Event 5"></div>
+                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-5.jpg" alt="Event 5"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
                 <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/imgevents/event-6.jpg" alt="Event 6"></div>
+                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-6.jpg" alt="Event 6"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
@@ -144,7 +146,7 @@
             </div>
             <div class="shop-list">
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/imgshop/product-1.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-1.jpg" alt="Product"></div>
                     <div class="product-description">Hooded jacket Performance art. 6822/101</div>
                     <div class="product-action">
                         <div class="product-price">136 EUR</div>
@@ -152,7 +154,7 @@
                     </div>
                 </div>
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/imgshop/product-2.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-2.jpg" alt="Product"></div>
                     <div class="product-description">Hooded jacket Performance art. 6822/102</div>
                     <div class="product-action">
                         <div class="product-price">136 EUR</div>
@@ -160,7 +162,7 @@
                     </div>
                 </div>
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/imgshop/product-3.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-3.jpg" alt="Product"></div>
                     <div class="product-description">Hooded jacket Performance art. 6822/103</div>
                     <div class="product-action">
                         <div class="product-price">136 EUR</div>
@@ -168,7 +170,7 @@
                     </div>
                 </div>
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/imgshop/product-4.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-4.jpg" alt="Product"></div>
                     <div class="product-description">JAKO Presentation trousers 6589/800</div>
                     <div class="product-action">
                         <div class="product-price">98 EUR</div>
@@ -176,7 +178,7 @@
                     </div>
                 </div>
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/imgshop/product-5.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-5.jpg" alt="Product"></div>
                     <div class="product-description">JAKO Presentation trousers 6589/801</div>
                     <div class="product-action">
                         <div class="product-price">98 EUR</div>
@@ -184,7 +186,7 @@
                     </div>
                 </div>
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/imgshop/product-6.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-6.jpg" alt="Product"></div>
                     <div class="product-description">JAKO Presentation trousers 6589/802</div>
                     <div class="product-action">
                         <div class="product-price">98 EUR</div>
@@ -222,7 +224,7 @@
                     <h4>Adresa noastra</h4>
                     <p>str. Tricolorului, 39, MD-2012, or. Chișinău, Republica Moldova</p>
                     <br>
-                    <img src="https://uadrian24.github.io/imgmap.png" alt="map" class="contacts-map">
+                    <img src="https://uadrian24.github.io/img/map.png" alt="map" class="contacts-map">
                     <br>
                     <br>
                     <p>Pentru orice informatie suplimentara sau sugestii ne puteți contacta la <a href="mailto:footbal@puhoi.com">footbal@puhoi.com</a> sau utilizand forma de contacte.</p>
@@ -259,16 +261,16 @@
         <div class="container">
             <div class="social-icons">
                 <a href="https://www.facebook.com/" target="_blank">
-                    <img src="https://uadrian24.github.io/imgsocial/facebook.svg" alt="facebook">
+                    <img src="https://uadrian24.github.io/img/social/facebook.svg" alt="facebook">
                 </a>
                 <a href="https://x.com/" target="_blank">
-                    <img src="https://uadrian24.github.io/imgsocial/twitter-x1.svg" alt="twitter">
+                    <img src="https://uadrian24.github.io/img/social/twitter-x1.svg" alt="twitter">
                 </a>
                 <a href="https://www.instagram.com/" target="_blank">
-                    <img src="https://uadrian24.github.io/imgsocial/instagram.svg" alt="instagram">
+                    <img src="https://uadrian24.github.io/img/social/instagram.svg" alt="instagram">
                 </a>
                 <a href="https://www.pinterest.com/" target="_blank">
-                    <img src="https://uadrian24.github.io/imgsocial/pinterest.svg" alt="pinterest">
+                    <img src="https://uadrian24.github.io/img/social/pinterest.svg" alt="pinterest">
                 </a>
             </div>
             <!--div class="terms"><a href="https://uadrian24.github.io/#">Terms of Use</a> and <a href="https://uadrian24.github.io/#">Privacy Policy</a></div-->
