--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <button class="message-btn">Detalii</button>
                     </div>
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/imgteam/player-2.jpg" alt="Team member" class="user-image">
+                        <img src="https://uadrian24.github.io/img/team/player-2.jpg" alt="Team member" class="user-image">
                         <h3 class="user-name">Cristian Avram</h3>
                         <button class="message-btn">Detalii</button>
                     </div>
