--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="intro">
             <div class="container">
                 <h4>CLUBUL CARE CISTIGA MEREU</h4>
-                <h1>FC PUHOI</h1>
+                <h1 class="intro-title">FC PUHOI</h1>
                 <div style="margin-top: 30px;"><a href="#about" class="btn btn-red">Vezi mai multe</a></div>
             </div>
         </div>
