--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="https://uadrian24.github.io/assets/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="https://uadrian24.github.io/css/style.css">
-    <link rel="stylesheet" href="https://uadrian24.github.io/css/slider.css">
+    <link rel="stylesheet" href="https://uadrian24.github.io/css/style.css?v=1.1.0">
+    <link rel="stylesheet" href="https://uadrian24.github.io/css/slider.css?v=1.1.0">
 </head>
 <body>
     <header id="home">
@@ -278,6 +278,6 @@
         </div>
     </footer>
     <script src="https://uadrian24.github.io/assets/swiper/swiper-bundle.min.js"></script>
-    <script src="https://uadrian24.github.io/js/scripts.js"></script>
+    <script src="https://uadrian24.github.io/js/scripts.js?v=1.1.0"></script>
 </body>
 </html>
