--- a/index.html
+++ b/index.html
@@ -3,43 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Landing</title>
+    <title>Home page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap" rel="stylesheet">
-    
-    <link rel="stylesheet" href="https://uadrian24.github.io/assets/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="https://uadrian24.github.io/css/style.css?v=1.3.0">
-    <link rel="stylesheet" href="https://uadrian24.github.io/css/slider.css?v=1.3.0">
+
+    <link rel="stylesheet" href="./assets/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/slider.css">
 </head>
-<body>
+<body class="home-page">
     <header id="home">
         <nav class="main-nav">
             <div class="container">
-                <a href="https://uadrian24.github.io/#home" class="logo">
-                    <img src="https://uadrian24.github.io/img/logo.png" alt="logo">
+                <a href="./index.html#home" class="logo">
+                    <img src="./img/logo.png" alt="logo">
                 </a>
                 <div class="main-menu">
-                    <a href="https://uadrian24.github.io/#home" class="menu-link active">Home</a>
-                    <a href="https://uadrian24.github.io/#about" class="menu-link">Istorie</a>
-                    <a href="https://uadrian24.github.io/#team" class="menu-link">Echipa</a>
-                    <a href="https://uadrian24.github.io/#events" class="menu-link">Competitii</a>
-                    <a href="https://uadrian24.github.io/#shop" class="menu-link">Shop</a>
-                    <a href="https://uadrian24.github.io/#contacts" class="menu-link">Contacte</a>
+                    <a href="./index.html#home" class="menu-link active">Home</a>
+                    <a href="./index.html#about" class="menu-link">Istorie</a>
+                    <a href="./index.html#team" class="menu-link">Echipa</a>
+                    <a href="./index.html#events" class="menu-link">Competitii</a>
+                    <a href="./index.html#shop" class="menu-link">Shop</a>
+                    <a href="./index.html#contacts" class="menu-link">Contacte</a>
                 </div>
                 <a href="javascript:void(0);" class="menu-toggle" onclick="toggleMenu()">
-                    <img src="https://uadrian24.github.io/img/menu-toggle.svg" alt="toggle-menu">
+                    <img src="./img/menu-toggle.svg" alt="toggle-menu">
                 </a>
             </div>
         </nav>
         <div class="intro">
             <div class="container">
                 <h4>CLUBUL CARE CISTIGA MEREU</h4>
-                <h1 class="intro-title">FC PUHOI</h1>
-                <div style="margin-top: 30px;"><a href="#about" class="btn btn-red">Vezi mai multe</a></div>
+                <h1>FC PUHOI</h1>
+                <div style="margin-top: 30px;"><a href="about.html" class="btn btn-red">Vezi mai multe</a></div>
             </div>
         </div>
-        <img class="header-bg" src="https://uadrian24.github.io/img/header-bg.jpg" alt="header-background">
+        <img class="header-bg" src="./img/header-bg.jpg" alt="header-background">
     </header>
     <section id="about" class="about">
         <div class="container">
@@ -47,11 +47,11 @@
                 <h2 class="section-title">Istoria Clubului</h2>
             </div>
             <div class="about-content">
-                <div class="about-left"><img src="https://uadrian24.github.io/img/logo-big.svg" alt="about"></div>
-                <div class="about-right">
+                <div class="about-left mw-360"><img src="./img/logo-big.svg" alt="about"></div>
+                <div class="about-right bg-light">
                     <p>Fondat în 1923, Clubul de Fotbal "FC Puhoi" a devenit rapid o forță în fotbalul românesc, cunoscut pentru stilul de joc agresiv și pentru pasiunea nemărginită a suporterilor săi.</p>
                     <p>Echipa a câștigat primul titlu național în 1931 și, de atunci, a adunat numeroase trofee interne și internaționale.</p>
-                    <div><a href="https://uadrian24.github.io/#" class="btn btn-red">Afla mai multe</a></div>
+                    <div><a href="./about.html#about" class="btn btn-red">Afla mai multe</a></div>
                 </div>
             </div>
         </div>
@@ -64,32 +64,32 @@
             <div class="cards-swiper swiper-container">
                 <div class="card-list swiper-wrapper">
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/img/team/player-1.jpg" alt="Team member" class="user-image">
+                        <img src="./img/team/player-1.jpg" alt="Team member" class="user-image">
                         <h3 class="user-name">Alexandru Celeadnic</h3>
                         <button class="message-btn">Detalii</button>
                     </div>
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/img/team/player-2.jpg" alt="Team member" class="user-image">
+                        <img src="./img/team/player-2.jpg" alt="Team member" class="user-image">
                         <h3 class="user-name">Cristian Avram</h3>
                         <button class="message-btn">Detalii</button>
                     </div>
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/img/team/player-3.png" alt="User Image" class="user-image">
+                        <img src="./img/team/player-3.png" alt="User Image" class="user-image">
                         <h3 class="user-name">Dorian Railean</h3>
                         <button class="message-btn">Detalii</button>
                     </div>
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/img/team/player-4.jpg" alt="User Image" class="user-image">
+                        <img src="./img/team/player-4.jpg" alt="User Image" class="user-image">
                         <h3 class="user-name">Nicolai Cebotari</h3>
                         <button class="message-btn">Detalii</button>
                     </div>
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/img/team/player-5.jpg" alt="User Image" class="user-image">
+                        <img src="./img/team/player-5.jpg" alt="User Image" class="user-image">
                         <h3 class="user-name">Alexei Koshelev</h3>
                         <button class="message-btn">Detalii</button>
                     </div>
                     <div class="card-item swiper-slide">
-                        <img src="https://uadrian24.github.io/img/team/player-6.jpg" alt="User Image" class="user-image">
+                        <img src="./img/team/player-6.jpg" alt="User Image" class="user-image">
                         <h2 class="user-name">Andrei Cojuhar</h2>
                         <button class="message-btn">Detalii</button>
                     </div>
@@ -106,33 +106,33 @@
                 <h2 class="section-title">Competitii</h2>
             </div>
             <div class="events-list">
-                <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-1.jpg" alt="Event 1"></div>
+                <a href="./index.html#" class="event">
+                    <div class="event-image"><img src="./img/events/event-1.jpg" alt="Event 1"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
-                <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-2.jpg" alt="Event 2"></div>
+                <a href="./index.html#" class="event">
+                    <div class="event-image"><img src="./img/events/event-2.jpg" alt="Event 2"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
-                <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-3.jpg" alt="Event 2"></div>
+                <a href="./index.html#" class="event">
+                    <div class="event-image"><img src="./img/events/event-3.jpg" alt="Event 2"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
-                <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-4.jpg" alt="Event 4"></div>
+                <a href="./index.html#" class="event">
+                    <div class="event-image"><img src="./img/events/event-4.jpg" alt="Event 4"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
-                <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-5.jpg" alt="Event 5"></div>
+                <a href="./index.html#" class="event">
+                    <div class="event-image"><img src="./img/events/event-5.jpg" alt="Event 5"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
-                <a href="https://uadrian24.github.io/#" class="event">
-                    <div class="event-image"><img src="https://uadrian24.github.io/img/events/event-6.jpg" alt="Event 6"></div>
+                <a href="./index.html#" class="event">
+                    <div class="event-image"><img src="./img/events/event-6.jpg" alt="Event 6"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
@@ -146,51 +146,51 @@
             </div>
             <div class="shop-list">
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-1.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="./img/shop/product-1.jpg" alt="Product"></div>
                     <div class="product-description">Hooded jacket Performance art. 6822/101</div>
                     <div class="product-action">
                         <div class="product-price">136 EUR</div>
-                        <a href="https://uadrian24.github.io/#" class="btn btn-red">Cumpara</a>
+                        <a href="./index.html#" class="btn btn-red">Cumpara</a>
                     </div>
                 </div>
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-2.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="./img/shop/product-2.jpg" alt="Product"></div>
                     <div class="product-description">Hooded jacket Performance art. 6822/102</div>
                     <div class="product-action">
                         <div class="product-price">136 EUR</div>
-                        <a href="https://uadrian24.github.io/#" class="btn btn-red">Cumpara</a>
+                        <a href="./index.html#" class="btn btn-red">Cumpara</a>
                     </div>
                 </div>
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-3.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="./img/shop/product-3.jpg" alt="Product"></div>
                     <div class="product-description">Hooded jacket Performance art. 6822/103</div>
                     <div class="product-action">
                         <div class="product-price">136 EUR</div>
-                        <a href="https://uadrian24.github.io/#" class="btn btn-red">Cumpara</a>
+                        <a href="./index.html#" class="btn btn-red">Cumpara</a>
                     </div>
                 </div>
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-4.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="./img/shop/product-4.jpg" alt="Product"></div>
                     <div class="product-description">JAKO Presentation trousers 6589/800</div>
                     <div class="product-action">
                         <div class="product-price">98 EUR</div>
-                        <a href="https://uadrian24.github.io/#" class="btn btn-red">Cumpara</a>
+                        <a href="./index.html#" class="btn btn-red">Cumpara</a>
                     </div>
                 </div>
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-5.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="./img/shop/product-5.jpg" alt="Product"></div>
                     <div class="product-description">JAKO Presentation trousers 6589/801</div>
                     <div class="product-action">
                         <div class="product-price">98 EUR</div>
-                        <a href="https://uadrian24.github.io/#" class="btn btn-red">Cumpara</a>
+                        <a href="./index.html#" class="btn btn-red">Cumpara</a>
                     </div>
                 </div>
                 <div class="product">
-                    <div class="product-image"><img src="https://uadrian24.github.io/img/shop/product-6.jpg" alt="Product"></div>
+                    <div class="product-image"><img src="./img/shop/product-6.jpg" alt="Product"></div>
                     <div class="product-description">JAKO Presentation trousers 6589/802</div>
                     <div class="product-action">
                         <div class="product-price">98 EUR</div>
-                        <a href="https://uadrian24.github.io/#" class="btn btn-red">Cumpara</a>
+                        <a href="./index.html#" class="btn btn-red">Cumpara</a>
                     </div>
                 </div>
             </div>
@@ -221,13 +221,13 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <h4>Adresa noastra</h4>
+                    <h4>Adresa noastră</h4>
                     <p>str. Tricolorului, 39, MD-2012, or. Chișinău, Republica Moldova</p>
                     <br>
-                    <img src="https://uadrian24.github.io/img/map.png" alt="map" class="contacts-map">
+                    <img src="./img/map.png" alt="map" class="contacts-map">
                     <br>
                     <br>
-                    <p>Pentru orice informatie suplimentara sau sugestii ne puteți contacta la <a href="mailto:footbal@puhoi.com">footbal@puhoi.com</a> sau utilizand forma de contacte.</p>
+                    <p>Pentru orice informație suplimentară sau sugestii ne puteți contacta la <a href="mailto:footbal@puhoi.com">footbal@puhoi.com</a> sau utilizand forma de contacte.</p>
                 </div>
                 <div class="col">
                     <form id="contactForm" class="form contact-form" action="/">
@@ -249,35 +249,35 @@
                         </div>
                         <div class="form-group">
                             <div>
-                                <a href="https://uadrian24.github.io/#" class="btn btn-red">Trimite</a>
+                                <a href="./index.html#" class="btn btn-red">Trimite</a>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
-        </div> 
+        </div>
     </section>
     <footer>
         <div class="container">
             <div class="social-icons">
                 <a href="https://www.facebook.com/" target="_blank">
-                    <img src="https://uadrian24.github.io/img/social/facebook.svg" alt="facebook">
+                    <img src="./img/social/facebook.svg" alt="facebook">
                 </a>
                 <a href="https://x.com/" target="_blank">
-                    <img src="https://uadrian24.github.io/img/social/twitter-x1.svg" alt="twitter">
+                    <img src="./img/social/twitter-x1.svg" alt="twitter">
                 </a>
                 <a href="https://www.instagram.com/" target="_blank">
-                    <img src="https://uadrian24.github.io/img/social/instagram.svg" alt="instagram">
+                    <img src="./img/social/instagram.svg" alt="instagram">
                 </a>
                 <a href="https://www.pinterest.com/" target="_blank">
-                    <img src="https://uadrian24.github.io/img/social/pinterest.svg" alt="pinterest">
+                    <img src="./img/social/pinterest.svg" alt="pinterest">
                 </a>
             </div>
-            <!--div class="terms"><a href="https://uadrian24.github.io/#">Terms of Use</a> and <a href="https://uadrian24.github.io/#">Privacy Policy</a></div-->
+            <!--div class="terms"><a href="./index.html#">Terms of Use</a> and <a href="./index.html#">Privacy Policy</a></div-->
             <div class="copyright">&copy; 2025. All rights reserved</div>
         </div>
     </footer>
-    <script src="https://uadrian24.github.io/assets/swiper/swiper-bundle.min.js"></script>
-    <script src="https://uadrian24.github.io/js/scripts.js?v=1.3.0"></script>
+    <script src="assets/swiper/swiper-bundle.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
