--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container">
                 <h4>CLUBUL CARE CISTIGA MEREU</h4>
                 <h1>FC PUHOI</h1>
-                <div style="margin-top: 30px;"><a href="about.html" class="btn btn-red">Vezi mai multe</a></div>
+                <div style="margin-top: 30px;"><a href="./about.html" class="btn btn-red">Vezi mai multe</a></div>
             </div>
         </div>
         <img class="header-bg" src="./img/header-bg.jpg" alt="header-background">
@@ -106,32 +106,32 @@
                 <h2 class="section-title">Competitii</h2>
             </div>
             <div class="events-list">
-                <a href="./index.html#" class="event">
+                <a href="./post.html" class="event">
                     <div class="event-image"><img src="./img/events/event-1.jpg" alt="Event 1"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
-                <a href="./index.html#" class="event">
+                <a href="./post.html" class="event">
                     <div class="event-image"><img src="./img/events/event-2.jpg" alt="Event 2"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
-                <a href="./index.html#" class="event">
+                <a href="./post.html" class="event">
                     <div class="event-image"><img src="./img/events/event-3.jpg" alt="Event 2"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
-                <a href="./index.html#" class="event">
+                <a href="./post.html" class="event">
                     <div class="event-image"><img src="./img/events/event-4.jpg" alt="Event 4"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
-                <a href="./index.html#" class="event">
+                <a href="./post.html" class="event">
                     <div class="event-image"><img src="./img/events/event-5.jpg" alt="Event 5"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
                 </a>
-                <a href="./index.html#" class="event">
+                <a href="./post.html" class="event">
                     <div class="event-image"><img src="./img/events/event-6.jpg" alt="Event 6"></div>
                     <div class="event-date">5 mai 2025 11:00</div>
                     <div class="event-description">Etapa 1 de calificare a campionatului national de fotbal</div>
@@ -277,7 +277,7 @@
             <div class="copyright">&copy; 2025. All rights reserved</div>
         </div>
     </footer>
-    <script src="assets/swiper/swiper-bundle.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="./assets/swiper/swiper-bundle.min.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
